# whisper-diarization

./: .gitignore  main.ipynb  main.py  pyproject.toml  readme.md  requirements.txt
app/: diarization.py  vtt.py  whisper.py
src/: diarization.py  settings.py  vtt.py  whisper.py
