[project]
name = "whisper-diarization"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Martinelli",email = "martinelliluca98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai (>=2.8.1,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pyannote-audio (>=4.0.2,<5.0.0)",
    "audioop-lts (>=0.2.2,<0.3.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "webvtt-py (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false